ci: パッケージの更新基準をリリースから14日に変更

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,6 +4,7 @@
   "extends": ["config:base", "group:allNonMajor"],
   "ignoreDeps": ["node"],
   "labels": ["🤖dependencies"],
+  "minimumReleaseAge": "14 days",
   "packageRules": [
     {
       "depTypeList": ["peerDependencies"],
